<resources>

  <string name="Rs">\u20B9</string>

  <string name="facebookAppID">548793841817925</string>

  <string name="app_name">propaget-client</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>

  <!--Button text-->
  <string name="btn_login_default">Login Using Propagate Account</string>
  <string name="btn_login_sign_in">SIGN IN</string>
  <string name="btn_login_sign_up">SIGN UP</string>
  <string name="btn_login_other">Login Using Other Accounts</string>

  <string name="btnLogin">Login</string>
  <string name="btnLogOut">LogOut</string>
  <string name="btn_submit">Submit</string>
  <string name="btn_delete_dist_list">Delete Distribution List</string>

  <!--TextView Hint-->
  <string name="hint_email">Email</string>
  <string name="hint_password">Password</string>

  <string name="hint_property_title">Title</string>
  <string name="hint_property_description">Description</string>
  <string name="hint_property_email">Client Email</string>
  <string name="hint_property_location">Location</string>
  <string name="hint_property_address">Address</string>
  <string name="hint_property_area">Area in Sq Ft</string>
  <string name="hint_property_price">Price</string>

  <string name="hint_requirement_title">Title</string>
  <string name="hint_requirement_description">Description</string>
  <string name="hint_requirement_email">Client Email</string>
  <string name="hint_requirement_location">Location</string>
  <string name="hint_requirement_area">Area in Sq Ft</string>
  <string name="hint_requirement_range">Area Range in Sq Ft</string>
  <string name="hint_requirement_price">Price</string>
  <string name="hint_requirement_price_range">Price Range</string>
  <string name="search_hint">Search Member...</string>
  <string name="hint_reg_user_name">Name</string>
  <string name="hint_reg_user_email">Email</string>
  <string name="hint_reg_user_phone">Phone Number</string>
  <string name="hint_reg_user_password">Password</string>
  <string name="hint_reg_user_conf_password">Confirm Password</string>

  <!--Role-->
  <string name="role_agent">Agent</string>
  <string name="role_client">Client</string>

  <!-- Menu -->
  <string name="menu_dist_list">Distribution List</string>
  <string name="menu_property">Property</string>
  <string name="menu_requirement">Requirement</string>
  <string name="menu_logout">Logout</string>
  <string name="menu_Edit">Edit</string>
  <string name="menu_search">Search</string>
  <string name="btn_register">Register</string>
  <string name="btn_skip">Skip</string>
  <string name="title_activity_test">TestActivity</string>

</resources>
