<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="10dp">
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView"
    android:isScrollContainer="true">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <EditText
        android:id="@+id/addPropertyEtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_property_title"
        android:inputType="textAutoComplete"
        android:imeOptions="flagNavigateNext"/>

      <EditText
        android:id="@+id/addPropertyEtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addPropertyEtTitle"
        android:hint="@string/hint_property_description"
        android:inputType="textAutoComplete"
        android:imeOptions="flagNavigateNext"/>

      <EditText
        android:id="@+id/addPropertyEtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addPropertyEtDescription"
        android:hint="@string/hint_property_email"
        android:inputType="textEmailAddress"
        android:imeOptions="flagNavigateNext"/>

      <EditText
        android:id="@+id/addPropertyEtLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addPropertyEtEmail"
        android:hint="@string/hint_property_location"
        android:inputType="textAutoComplete"
        android:imeOptions="flagNavigateNext"/>

      <EditText
        android:id="@+id/addPropertyEtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addPropertyEtLocation"
        android:hint="@string/hint_property_address"
        android:inputType="textAutoComplete"
        android:imeOptions="flagNavigateNext"/>

      <EditText
        android:id="@+id/addPropertyEtArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addPropertyEtAddress"
        android:hint="@string/hint_property_area"
        android:inputType="number"
        android:imeOptions="flagNavigateNext"/>

      <EditText
        android:id="@+id/addPropertyEtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addPropertyEtArea"
        android:hint="@string/hint_property_price"
        android:inputType="number"
        android:imeOptions="actionDone"/>

      <Spinner
        android:id="@+id/addPropertySpType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addPropertyEtPrice"
        android:entries="@array/array_property_type"
        android:layout_margin="10dp">
      </Spinner>

      <Button
        android:id="@+id/addPropertyBtnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addPropertySpType"
        android:text="@string/btn_submit"
        android:layout_centerHorizontal="true"/>
    </RelativeLayout>

  </ScrollView>
</RelativeLayout>