<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/scrollView"
      android:isScrollContainer="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <EditText
          android:id="@+id/register_user_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textAutoComplete"
          android:imeOptions="flagNavigateNext"
          android:hint="@string/hint_reg_user_name"/>

      <EditText
          android:id="@+id/register_user_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_reg_user_email"
          android:inputType="textEmailAddress"
          android:imeOptions="flagNavigateNext"
          android:layout_below="@+id/register_user_name"/>

      <EditText
          android:id="@+id/register_user_phone_number"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_reg_user_phone"
          android:inputType="phone"
          android:imeOptions="flagNavigateNext"
          android:layout_below="@+id/register_user_email"/>

      <EditText
          android:id="@+id/register_user_pass"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_reg_user_password"
          android:inputType="textPassword"
          android:imeOptions="flagNavigateNext"
          android:layout_below="@+id/register_user_phone_number"/>

      <EditText
          android:id="@+id/register_user_confirm_pass"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_reg_user_conf_password"
          android:inputType="textPassword"
          android:imeOptions="actionDone"
          android:layout_below="@+id/register_user_pass"/>

      <Button
          android:id="@+id/register_user_btn_register"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/register_user_confirm_pass"
          android:text="@string/btn_register"
          android:layout_centerHorizontal="true"/>
    </RelativeLayout>

  </ScrollView>
</RelativeLayout>