<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <LinearLayout
      android:id="@+id/linearLoginOptions"
      android:layout_width="250sp"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_centerInParent="true">

    <Button
        android:id="@+id/loginSelectionSignIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_sign_in"/>
    <Button
        android:id="@+id/loginSelectionSignUP"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_sign_up"/>

  </LinearLayout>

  <LinearLayout
      android:id="@+id/linearSignUp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_centerInParent="true"
      android:visibility="gone">

    <Button
        android:id="@+id/loginSelectionBtnDefaultLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_default"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/loginSelectionBtnGPlusSignIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <com.facebook.widget.LoginButton
        android:id="@+id/loginSelectionBtnFBSignIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="20dp"/>

  </LinearLayout>

</RelativeLayout>
